--- a/index.html
+++ b/index.html
@@ -10,145 +10,118 @@
     <script type="text/javascript" src="../../lib/hash.js"></script>
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            background-color: white;
+            background-color: #ffffff;
+            color: #000000;
             background-image: url('pics/newsletter_bg.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            transition: background-color 0.5s ease;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            position: relative;
+            font-family: Arial, sans-serif;
+            transition: background-color 0.5s, color 0.5s;
+        }
+
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #ffffffcc;
+            z-index: 1;
+            pointer-events: none;
         }
 
         #canvas {
             position: relative;
+            z-index: 2;
             width: 100%;
-            height: 100vh;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: -20px;
-        }
-
-        .sj-book {
-            max-width: 100%;
-            max-height: 100%;
-            transition: transform 0.3s ease-in-out;
+            flex-wrap: wrap;
+            box-sizing: border-box;
+            transition: transform 0.3s ease;
+            user-select: none;
         }
 
         .controls {
             position: fixed;
-            bottom: -10px;
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
             gap: 10px;
-            z-index: 10;
+            z-index: 3;
         }
 
         .controls button {
             width: 50px;
             height: 50px;
             border: none;
+            background-color: #007bff;
+            color: #ffffff;
+            font-size: 20px;
             border-radius: 50%;
-            background-color: #333;
-            color: white;
-            font-size: 24px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: background-color 0.3s, transform 0.2s;
         }
 
         .controls button:hover {
-            background-color: #555;
+            background-color: #0056b3;
+            transform: scale(1.1);
         }
 
-        iframe {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 640px;
-            height: 480px;
-            border: none;
-            z-index: 100;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        @media (max-width: 1024px) {
+            #canvas {
+                padding: 10px;
+            }
+
+            .controls {
+                gap: 8px;
+            }
+
+            .controls button {
+                width: 45px;
+                height: 45px;
+                font-size: 18px;
+            }
         }
 
-        iframe.active {
-            display: block;
+        @media (max-width: 768px) {
+            .controls button {
+                width: 40px;
+                height: 40px;
+                font-size: 16px;
+            }
         }
 
-        .eye-button {
-            display: none;
-            position: fixed;
-            top: 50%;
-            right: 20px;
-            transform: translateY(-50%);
-            width: 50px;
-            height: 50px;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            font-size: 24px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            z-index: 10;
-        }
+        @media (max-width: 480px) {
+            .controls button {
+                width: 35px;
+                height: 35px;
+                font-size: 14px;
+            }
 
-        .eye-button:hover {
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-
-        .instructions {
-            position: fixed;
-            left: 20px;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 240px;
-            padding: 20px;
-            background: linear-gradient(145deg, rgba(0, 0, 0, 0.8), rgba(40, 40, 40, 0.9));
-            color: #fff;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-            font-family: Arial, sans-serif;
-            font-size: 14px;
-            z-index: 3;
-            text-align: center;
-        }
-
-        .instructions h3 {
-            margin-top: 0;
-            font-size: 18px;
-            font-weight: bold;
-            color: #ffcc00;
-        }
-
-        .instructions ul {
-            padding: 0;
-            margin: 10px 0 0 0;
-            list-style-type: none;
-        }
-
-        .instructions ul li {
-            margin-bottom: 12px;
-        }
-
-        .instructions ul li:before {
-            content: "✔ ";
-            color: #ffcc00;
-            margin-right: 5px;
+            .controls {
+                bottom: 15px;
+            }
         }
     </style>
 </head>
 <body>
+    <div class="overlay"></div>
+
     <div id="canvas">
         <div id="book-zoom">
-            <div class="sj-book" style="direction: rtl;">
+            <div class="sj-book" dir="rtl">
                 <div depth="5" class="hard"> <div class="side"></div> </div>
                 <div depth="5" class="hard front-side"> <div class="depth"></div> </div>
                 <div class="own-size"></div>
@@ -157,24 +130,107 @@
                 <div class="hard p18"></div>
             </div>
         </div>
+        <div id="slider-bar" class="turnjs-slider">
+            <div id="slider"></div>
+        </div>
     </div>
 
     <div class="controls">
-        <button id="prev-page">&#x25C0;</button>
-        <button id="next-page">&#x25B6;</button>
-        <button id="zoom-in">+</button>
-        <button id="zoom-out">-</button>
-        <button id="toggle-theme">&#x1F4A7;</button>
-        <button id="single-page">&#x1F441;</button>
-        <button id="toggle-form">تقييم</button>
+        <button id="prev-page">&#9664;</button>
+        <button id="next-page">&#9654;</button>
+        <button id="zoom-in">&#43;</button>
+        <button id="zoom-out">&#8722;</button>
+        <button id="toggle-theme">&#9788;</button>
+        <button id="toggle-view" style="display:none;">&#128065;</button>
     </div>
 
-    <iframe id="feedback-form" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa__RgmXVJUQUpYTlBQQzgyWVBNQU9MWkNKN0tRWkM4Vi4u&embed=true"></iframe>
+    <script type="text/javascript">
+        let zoomLevel = 1;
+        let singlePageView = false;
+        let isDragging = false;
+        let startX, startY, initialX, initialY;
 
-    <div class="eye-button" id="eye-button">&#128065;</div>
+        // إظهار زر العين بعد الصفحة الثانية
+        function showEyeButton(page) {
+            if (page > 2) {
+                document.getElementById('toggle-view').style.display = 'block'; // إظهار زر العين بعد الصفحة الثانية
+            } else {
+                document.getElementById('toggle-view').style.display = 'none'; // إخفاء زر العين قبل الصفحة الثانية
+            }
+        }
 
-    <script>
-        // إلغاء فتح النموذج تلقائيًا عند تحميل الصفحة
+        document.getElementById('prev-page').addEventListener('click', function () {
+            $('.sj-book').turn('next'); // Adjust for RTL
+        });
+
+        document.getElementById('next-page').addEventListener('click', function () {
+            $('.sj-book').turn('previous'); // Adjust for RTL
+        });
+
+        document.getElementById('zoom-in').addEventListener('click', function () {
+            zoomLevel = Math.min(zoomLevel + 0.1, 2);
+            document.getElementById('canvas').style.transform = `scale(${zoomLevel})`;
+        });
+
+        document.getElementById('zoom-out').addEventListener('click', function () {
+            zoomLevel = Math.max(zoomLevel - 0.1, 0.5);
+            document.getElementById('canvas').style.transform = `scale(${zoomLevel})`;
+        });
+
+        document.getElementById('toggle-theme').addEventListener('click', function () {
+            const body = document.body;
+            const isDark = body.style.backgroundColor === 'rgb(0, 0, 0)';
+
+            if (isDark) {
+                body.style.backgroundColor = '#ffffff';
+                body.style.color = '#000000';
+            } else {
+                body.style.backgroundColor = '#000000';
+                body.style.color = '#ffffff';
+            }
+        });
+
+        document.getElementById('toggle-view').addEventListener('click', function () {
+            const flipbook = $('.sj-book');
+            flipbook.turn('page', 4);  // الانتقال إلى صفحة معينة داخل الكتاب عند الضغط على زر العين
+
+            // تكبير الصفحة لتتناسب مع مقاسات الأجهزة
+            document.getElementById('canvas').style.transform = 'scale(1.5)';
+            enableDragging(); // تمكين السحب عند الضغط على زر العين
+        });
+
+        // تفعيل السحب عند الضغط على زر العين
+        function enableDragging() {
+            document.getElementById('canvas').addEventListener('mousedown', startDrag);
+            document.getElementById('canvas').addEventListener('touchstart', startDrag);
+            document.addEventListener('mousemove', drag);
+            document.addEventListener('touchmove', drag);
+            document.addEventListener('mouseup', endDrag);
+            document.addEventListener('touchend', endDrag);
+        }
+
+        function startDrag(e) {
+            e.preventDefault();
+            isDragging = true;
+            startX = e.pageX || e.touches[0].pageX;
+            startY = e.pageY || e.touches[0].pageY;
+            initialX = document.getElementById('canvas').scrollLeft;
+            initialY = document.getElementById('canvas').scrollTop;
+        }
+
+        function drag(e) {
+            if (isDragging) {
+                const dx = (e.pageX || e.touches[0].pageX) - startX;
+                const dy = (e.pageY || e.touches[0].pageY) - startY;
+                document.getElementById('canvas').scrollLeft = initialX - dx;
+                document.getElementById('canvas').scrollTop = initialY - dy;
+            }
+        }
+
+        function endDrag() {
+            isDragging = false;
+        }
+
         function loadApp() {
             var flipbook = $('.sj-book');
 
@@ -219,6 +275,7 @@
             $("#slider").slider({
                 min: 1,
                 max: 100,
+
                 start: function (event, ui) {
                     if (!window._thumbPreview) {
                         _thumbPreview = $('<div />', { 'class': 'thumbnail' }).html('<div></div>');
@@ -263,10 +320,10 @@
 
                 switch (e.keyCode) {
                     case previous:
-                        $('.sj-book').turn('previous');
+                        $('.sj-book').turn('next'); // Adjust for RTL
                         break;
                     case next:
-                        $('.sj-book').turn('next');
+                        $('.sj-book').turn('previous'); // Adjust for RTL
                         break;
                 }
             });
@@ -280,12 +337,14 @@
                 gradients: true,
                 duration: 1000,
                 pages: 18,
-                direction: 'rtl',
+                direction: 'rtl', // Right-to-Left direction
                 when: {
                     turning: function (e, page, view) {
                         var book = $(this),
                             currentPage = book.turn('page'),
                             pages = book.turn('pages');
+
+                        showEyeButton(page);  // إظهار زر العين بعد الصفحة الثانية
 
                         if (currentPage > 3 && currentPage < pages - 3) {
                             if (page == 1) {
@@ -322,32 +381,36 @@
                             $('.sj-book .p17').removeClass('fixed');
 
                         Hash.go('page/' + page).update();
-
-                        // إظهار / إخفاء زر العين بناءً على الصفحة
-                        const eyeButton = document.getElementById('eye-button');
-                        if ([1, 2, 8, 9].includes(page)) {
-                            eyeButton.style.display = 'none';
-                        } else if (page > 3 && page < 8) {
-                            eyeButton.style.display = 'flex';
-                        } else {
-                            eyeButton.style.display = 'none';
-                        }
                     },
 
                     turned: function (e, page, view) {
                         var book = $(this);
 
                         if (page == 2 || page == 3) {
-                            book.turn('peel', 'br');
+                            book.turn('peel', 'bl'); // Adjust for RTL
                         }
 
                         updateDepth(book);
 
-                        setTimeout(function () {
-                            $('#slider').slider('value', getViewNumber(book, page));
-                        }, 1);
+                        $('#slider').slider('value', getViewNumber(book, page));
 
                         book.turn('center');
+                    },
+
+                    start: function (e, pageObj) {
+                        moveBar(true);
+                    },
+
+                    end: function (e, pageObj) {
+                        var book = $(this);
+
+                        updateDepth(book);
+
+                        setTimeout(function () {
+                            $('#slider').slider('value', getViewNumber(book));
+                        }, 1);
+
+                        moveBar(false);
                     },
 
                     missing: function (e, pages) {
@@ -373,38 +436,6 @@
             complete: loadApp
         });
 
-        document.getElementById('toggle-theme').addEventListener('click', function () {
-            document.body.style.backgroundColor = document.body.style.backgroundColor === 'black' ? 'white' : 'black';
-        });
-
-        document.getElementById('toggle-form').addEventListener('click', function () {
-            const form = document.getElementById('feedback-form');
-            form.classList.toggle('active');
-        });
-
-        document.getElementById('zoom-in').addEventListener('click', function () {
-            const book = document.querySelector('.sj-book');
-            book.style.transform = 'scale(1.2)';
-        });
-
-        document.getElementById('zoom-out').addEventListener('click', function () {
-            const book = document.querySelector('.sj-book');
-            book.style.transform = 'scale(1)';
-        });
-
-        document.getElementById('prev-page').addEventListener('click', function () {
-            $('.sj-book').turn('previous');
-        });
-
-        document.getElementById('next-page').addEventListener('click', function () {
-            $('.sj-book').turn('next');
-        });
-
-        document.getElementById('single-page').addEventListener('click', function () {
-            const flipbook = $('.sj-book');
-            const isSingle = flipbook.turn('display') === 'single';
-            flipbook.turn('display', isSingle ? 'double' : 'single');
-        });
     </script>
 </body>
 </html>
